@@ -3,6 +3,10 @@ CHANGES-1.1.txt
 
 CHANGES IN CUPS V1.1.21rc1
 
+	- The LPD backend now supports overriding the print job
+	  username via the device URI (STR #631)
+	- The scheduler did not handle an unknown MIME type when
+	  checking for a CGI script (STR #603)
 	- Added a timeout optimization to the scheduler's main
 	  loop to allow CUPS to sleep more of the time (STR
 	  #629)
